changed dir structure

--- a/Python/MontyHall.ipynb
+++ b/Python/MontyHall.ipynb
@@ -67,7 +67,7 @@
     "juiste oplossing kan worden gevonden met behulp van de techniek van de kansboom en\n",
     "dat het gebruik van deze techniek de frequentie-interpretatie stilzwijgend aanneemt. Ik\n",
     "geef hier de oplossing met de kansboom van drie scholieren uit de tweede klas.  \n",
-    "![](ddd/afbeelding.png)"
+    "![](data/afbeelding.png)"
    ]
   },
   {
