--- a/R/DiamondsDemo.ipynb
+++ b/R/DiamondsDemo.ipynb
@@ -261,14 +261,14 @@
        "\n",
        "|clarity | mean(price, na.rm = TRUE)|\n",
        "|:-------|-------------------------:|\n",
-       "|I1      |                  3790.036|\n",
-       "|IF      |                 11032.264|\n",
-       "|SI1     |                  6949.606|\n",
-       "|SI2     |                  5655.201|\n",
-       "|VS1     |                  9226.879|\n",
-       "|VS2     |                  8430.114|\n",
-       "|VVS1    |                 10863.481|\n",
-       "|VVS2    |                  9958.858|"
+       "|I1      |                  3718.648|\n",
+       "|IF      |                 10849.804|\n",
+       "|SI1     |                  6840.498|\n",
+       "|SI2     |                  5764.217|\n",
+       "|VS1     |                  9053.958|\n",
+       "|VS2     |                  8276.821|\n",
+       "|VVS1    |                 10599.228|\n",
+       "|VVS2    |                  9768.259|"
       ]
      },
      "metadata": {},
@@ -278,7 +278,7 @@
    "source": [
     "{echo=FALSE} \n",
     "{message=FALSE}\n",
-    "average_price <- diamonds %>% group_by(clarity) %>% filter(cut == \"Premium\", carat > 1, carat < 2) %>% summarize(mean(price,na.rm=TRUE))\n",
+    "average_price <- diamonds %>% group_by(clarity) %>% filter(cut == \"Premium\", carat >=1, carat <= 2) %>% summarize(mean(price,na.rm=TRUE))\n",
     "knitr::kable(average_price, caption = \"Average price per clarity group for cut Premium and carat values between 1 and 2\")"
    ]
   },
